[package]
name = "node_exporter_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = ["blocking"] }
prometheus-parse = "0.2.2"
chrono = "0.4.19"
serde = "1.0.136"
serde_derive = "1.0.136"
